Fix CSS : Responsive on mobile view fixed.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,14 +8,19 @@ body {
   font-family: sans-serif;
 }
 
+main {
+  width: 700px;
+}
+
 /* NAV TITLES */
 
 .nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding-top: 15px;
+  padding: 15px 10px 0px 10px;
   height: 75px;
+  box-sizing: border-box;
 }
 
 .nav__container > h1 {
@@ -28,6 +33,57 @@ body {
   font-style: italic;
   font-weight: 300;
   color: #bdc3c7;
+}
+
+/* WAVES CSS */
+
+.word-waves span {
+  position: absolute;
+  font-size: 24px;
+  font-weight: 600;
+  transform: translate(-50%, -50%);
+}
+
+.word-waves span:nth-child(1) {
+  color: transparent;
+  -webkit-text-stroke: 0.3px #3bd9d9;
+}
+
+.word-waves span:nth-child(2) {
+  color: rgb(128, 198, 255);
+  -webkit-text-stroke: 1px #3bd9d9;
+  animation: animation 3s ease-in-out infinite;
+}
+
+@keyframes animation {
+  0%,
+  100% {
+    clip-path: polygon(
+      0% 45%,
+      15% 44%,
+      32% 50%,
+      54% 60%,
+      70% 61%,
+      84% 59%,
+      100% 52%,
+      100% 100%,
+      0% 100%
+    );
+  }
+  50% {
+    clip-path: polygon
+      (
+        0% 60%,
+        16% 65%,
+        34% 66%,
+        51% 62%,
+        67% 50%,
+        84% 45%,
+        100% 46%,
+        100% 100%,
+        0% 100%
+      );
+  }
 }
 
 /* SWITCHER */
@@ -88,10 +144,6 @@ input:checked + .slider {
   background-color: #34495e;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px hsl(0, 0%, 88%);
-}
-
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
@@ -118,18 +170,17 @@ ul {
 }
 
 .container {
-  min-width: 700px;
+  width: 21em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  margin: auto;
 }
 
-/* todo-form */
 .container__form {
   margin: 40px 0px;
   box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
-  width: 400px;
+  width: 100%;
   border-radius: 10px;
   padding: 30px;
   display: flex;
@@ -139,6 +190,7 @@ ul {
 
 .container__form--light {
   background-color: #34495e;
+  transition-duration: 1s;
 }
 
 .container__form > input {
@@ -155,6 +207,7 @@ ul {
 .container__form--light > input {
   background-color: #2c3e50;
   color: #fff;
+  transition-duration: 1s;
 }
 
 .container__form > button {
@@ -165,16 +218,31 @@ ul {
   outline: none;
   border-radius: 5px;
   padding: 7px;
-  font-size: 1rem;
+  font-size: 1rem;x
+}
+
+.container__form > button:hover {
+  width: 100%;
+  background-color: #d079f3;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition-duration: 1s;
 }
 
 .container__form--light > button {
   background-color: #2980b9;
+  transition-duration: 1s;
+}
+
+.container__form--light > button:hover {
+  width: 100%;
+  background-color: #2f94d7;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition-duration: 1s;
 }
 
 .items {
   box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
-  width: 400px;
+  width: 100%;
   border-radius: 10px;
   padding: 30px;
   display: flex;
@@ -183,14 +251,8 @@ ul {
 }
 
 .items--light {
-  box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
-  width: 400px;
-  border-radius: 10px;
-  padding: 30px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   background-color: #34495e;
+  transition-duration: 1s;
 }
 
 .items > li {
@@ -205,11 +267,7 @@ ul {
   padding: 10px;
   font-size: 1.1rem;
   width: 100%;
-}
-
-.items--light > button {
-  filter: sepia(100%) brightness(80%) hue-rotate(170deg) saturate(70%)
-    contrast(300%);
+  transition-duration: 1s;
 }
 
 .item:first-child {
@@ -250,4 +308,5 @@ ul {
 .darkMode {
   background-color: #2c3e50;
   color: #ecf0f1;
+  transition-duration: 1s;
 }
